# pluralizer-py

./: .editorconfig  .flake8  .gitignore  .releaserc.json  .travis.yml  Makefile  README.md  package-lock.json  package.json  pluralize.py  pluralizer.py  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
pluralizer/: __init__.py  pluralizer.py  pluralizer_rules.py
tests/: test_pluralize.py
