[project]
name = "pluralizer-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "coverage>=7.8.2",
    "editorconfig-checker>=3.2.1",
    "pyright>=1.1.401",
    "ruff>=0.11.13",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.ruff]
exclude = ["evaluation"]
line-length = 120

[tool.ruff.lint]
# Enable the pycodestyle (`E`), Pyflakes (`F`) and Isort (`I`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["F", "I", "E", "W"]
ignore = ["W293"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5
